--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    rel="stylesheet">
   <link href="styles/all.css" rel="stylesheet">
   <link rel="stylesheet" href="styles/main.css">
-  <title>Héber Leonard</title>
+  <title>Mahmoud Attia</title>
 </head>
 <body>
   <div class="container">
@@ -18,7 +18,7 @@
       <div class="button green"></div>
     </div>
     <div class="title">
-      <a href="https://github.com/heberleonard2" target="_blank"><h1><i class='fab fa-github'></i> github.com/heber-leonard</h1></a>
+      <a href="https://github.com/attia-mahmoud" target="_blank"><h1><i class='fab fa-github'></i> github.com/attia-mahmoud</h1></a>
     </div>
     </div>
     <div id="app">
